# .defaults

./: \
cpp_template/: .clang-format  .clang-tidy  .clangd  CMakeLists.txt
cpp_template/src/: PPP_support.h  PPPheaders.h  main.cpp
scripts/: clangr.sh  setup_cpp_project.sh
